# tiktaktoe

./: CMakeLists.txt
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  cproject
include/: activate_gtk_window.h
src/: activate_gtk_window.c  main.c
